--- a/mastermind.css
+++ b/mastermind.css
@@ -3,13 +3,13 @@
     width:50px;
     height:50px;
     line-height:50px;
-    border: 2px solid #f5f5f5;
+    border: 2px solid #ffffff;
     border-radius: 50%;
     color:#ffffff;
     text-align:center;
     text-decoration:none;
     background: #ffffff;
 }
-.round-button:hover {
+.large-peg:hover {
     background: #ff0000;
 }
