--- a/mastermind.css
+++ b/mastermind.css
@@ -3,7 +3,7 @@
     width:50px;
     height:50px;
     line-height:50px;
-    border: 2px solid #ffffff;
+    border: 2px solid #000000;
     border-radius: 50%;
     color:#ffffff;
     text-align:center;
