--- a/mastermind.css
+++ b/mastermind.css
@@ -1,5 +1,5 @@
 .large-peg {
-    display:block;
+    display:inline;
     width:50px;
     height:50px;
     line-height:50px;
@@ -9,7 +9,6 @@
     text-align:center;
     text-decoration:none;
     background: #ffffff;
-    margin: 3px 3px 3px 3px;
 }
 .large-peg:hover {
     background: #ff0000;
