--- a/mastermind.css
+++ b/mastermind.css
@@ -32,7 +32,7 @@
 }
 
 .check-peg {
-    display:block-inline;
+    display: inline-block;
     width:20px;
     height:20px;
     line-height:20px;
