--- a/mastermind.css
+++ b/mastermind.css
@@ -53,11 +53,12 @@
 .check-button img {
     width: 50px;
     height: 50px;
+    margin: 3px 3px 3px 3px;
 }
 .check-region {
     display:inline-block;
-    width: 50px;
-    height: 50px;
+    width: 62px;
+    height: 62px;
 }
 #solution {
     visibility: hidden;
