--- a/mastermind.css
+++ b/mastermind.css
@@ -31,7 +31,10 @@
     text-align:center;
     text-decoration:none;
     background: #ffffff;
-    margin: 3px 3px 3px 3px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .check-peg {
