--- a/mastermind.css
+++ b/mastermind.css
@@ -1,35 +1,40 @@
+body {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #game-container {
-    display:inline-block;
+    display: inline-block;
 }
 
 .large-peg {
-    display:inline-block;
-    width:40px;
-    height:40px;
-    line-height:40px;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
     border: 2px solid #000000;
     border-radius: 50%;
-    color:#ffffff;
-    text-align:center;
-    text-decoration:none;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
     background: #ffffff;
     margin: 3px 3px 3px 3px;
 }
 
 #palette {
-    display:inline-block;
+    display: inline-block;
 }
 
 .palette-selector {
-    display:block;
-    width:30px;
-    height:30px;
-    line-height:30px;
+    display: block;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
     border: 2px solid #000000;
     border-radius: 50%;
-    color:#ffffff;
-    text-align:center;
-    text-decoration:none;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
     background: #ffffff;
     margin-top: 3px;
     margin-bottom: 3px;
@@ -39,21 +44,21 @@
 
 .check-peg {
     display: inline-block;
-    width:10px;
-    height:10px;
-    line-height:10px;
+    width: 10px;
+    height: 10px;
+    line-height: 10px;
     border: 2px solid #000000;
     border-radius: 50%;
-    color:#ffffff;
-    text-align:center;
-    text-decoration:none;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
     background: #ffffff;
     margin: 3px 3px 3px 3px;
     visibility: hidden;
 }
 
 .check-region {
-    display:inline-block;
+    display: inline-block;
     vertical-align: top;
     padding-top: 6px;
     width: 58px;
