--- a/mastermind.css
+++ b/mastermind.css
@@ -2,9 +2,12 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    width: 500px
 }
 
 #game-container {
+    margin-left: auto;
+    margin-right: auto;
     display: inline-block;
 }
 
